@@ -26,10 +26,8 @@ static ColorScheme getScheme( spriteID inPowerType ) {
     
 
 
-PowerUpSprite::PowerUpSprite( PowerUp inPower, PowerUpSet *inSubPowers,
-                              char inStartedEmpty )
-        : mStartedEmpty( inStartedEmpty ),
-          mPower( inPower ), mSubPowers( inSubPowers ),
+PowerUpSprite::PowerUpSprite( PowerUp inPower, PowerUpSet *inSubPowers )
+        : mPower( inPower ), mSubPowers( inSubPowers ),
           mColors( getScheme( inPower.powerType ) )  {
     
 
@@ -50,16 +48,13 @@ void PowerUpSprite::drawCenter( doublePair inPosition, double inFade ) {
 
         
 void PowerUpSprite::draw( doublePair inPosition, double inFade ) {
-    mPower.level = mSubPowers->getLevelSum( mPower.powerType );
-
-    if( mStartedEmpty ) {
+    if( mKeepUpdated ) {    
+        mPower.level = mSubPowers->getLevelSum( mPower.powerType );
         mPower.powerType = mSubPowers->getMajorityType();
         }
     
     drawPowerUp( mPower, inPosition, inFade );
     }
-
-
 
 
 
